--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,86 +35,66 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
-  flutter_gen: ^5.8.0
-  flutter_screenutil: ^5.9.3
-  get: ^4.6.6
-  cached_network_image: ^3.4.1
   google_fonts: ^6.2.1
-  dio: ^5.7.0
-  package_info_plus: ^8.1.2
-  url_launcher: ^6.3.1
-  get_it: ^8.0.3
-  get_storage: ^2.1.1
-  webview_flutter: ^4.10.0
-  firebase_messaging: ^15.2.0
-  device_info_plus: ^11.2.0
-  geocoding: ^3.0.0
-  geolocator: ^13.0.2
-  google_sign_in: ^6.2.2
-  image_picker: ^1.1.2
-  internet_connection_checker: ^3.0.1
-  intl:
-  permission_handler: ^11.3.1
-  sign_in_with_apple: ^6.1.4
-  provider: ^6.1.2
-  fluttertoast: ^8.2.10
-  flutter_displaymode: ^0.6.0
+  flutter_screenutil: ^5.9.3
+  get: ^4.7.2
+  rxdart: ^0.28.0
+  svg_image:
+  simple_gradient_text: ^1.3.0
+  dio: ^5.8.0+1
+
+  provider: ^6.1.4
   auto_animated: ^3.2.0
-  http: ^1.2.2
-  carousel_slider: ^5.0.0
+  get_storage: ^2.1.1
+  flutter_svg: ^2.1.0
+  get_it: ^8.0.3
+  intl_phone_field: ^3.2.0
+  fluttertoast: ^8.2.12
   device_preview: ^1.2.0
-  flutter_svg: ^2.0.17
-  percent_indicator: ^4.2.4
-  flutter_translate: ^4.1.0
-  hero_animation: ^1.1.4
-  progress_line: ^0.1.0
-  animated_number: ^1.0.2
-  flutter_rating_bar: ^4.0.1
-  syncfusion_flutter_gauges: ^24.1.41
-  table_calendar: ^3.2.0
+  url_launcher: ^6.3.1
+  pinput: ^5.0.1
+  cached_network_image: ^3.4.1
+  shimmer: ^3.0.0
+  #  flutter_sound: ^9.28.0
+  permission_handler: ^11.0.1
+  intl: ^0.19.0
+  path_provider: ^2.1.2
+  smooth_page_indicator: ^1.2.1
+  flutter_otp_text_field: ^1.5.1+1
+  country_code_picker: ^3.3.0
+  video_player: ^2.9.5
+  image_picker: ^1.1.2
+  easy_stepper: ^0.8.5+1
+  timeline_tile: ^2.0.0
+  percent_indicator: ^4.2.5
   fl_chart: ^1.0.0
-
-
-
+  syncfusion_flutter_gauges: ^24.1.41
+  curved_navigation_bar: ^1.0.6
+  animated_bottom_navigation_bar: ^1.4.0
+  google_nav_bar: ^5.0.6
+  flashy_tab_bar2: ^0.0.10
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
-  dependency_validator: ^4.1.0
-  build_runner:
-  flutter_gen_runner:
   flutter_test:
     sdk: flutter
+  pinput: ^5.0.1
+
+
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
-flutter_gen:
-  # Optional
-  output: lib/gen/
-  # Optional
-  line_length: 80
-
-  # Optional
-  integrations:
-    flutter_svg: false
-    flare_flutter: false
-    rive: false
-    lottie: false
-
-  colors:
-    inputs:
-      - assets/color/colors.xml
-    outputs:
-      class_name: AppColors
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -122,10 +102,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/color/
+    - assets/image/
     - assets/icons/
-    - assets/images/
-    - assets/lottie/
-
+    - assets/videos/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -138,17 +118,21 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+
+
+
+  fonts:
+    - family: Satoshi
+      fonts:
+        - asset: assets/fonts/Satoshi_Black.ttf
+        - asset: assets/fonts/Satoshi_Regular.ttf
+
+
+
   # fonts:
-  #   - family: Schyler
+  #   - family: Satoshi
   #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
+  #       - asset: assets/fonts/Satoshi-Blackr.ttf
+
+
+
